--- a/app/styles/components/map/timeline.scss
+++ b/app/styles/components/map/timeline.scss
@@ -112,6 +112,7 @@
   fill: $color-fishing-hours-timebar;
   fill-opacity: 0.5;
   height: $timebar-height;
+  stroke: $color-mid-blue;
   stroke-width: 1px;
 }
 
